[metadata]
name = sayori
version = 1.0.6
author = Tiffany
author_email = postnihilism@proton.me
description = Compose functions using pipeline notation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/postnihilism/sayori
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = sayori
python_requires = >=3.9

[options.packages.find]
where = sayori
